# CloudP2P

./: .gitignore  Cargo.toml  README.md
ClaudCode/: Cargo.toml  README.md
ClaudCode/config/: server1.toml
ClaudCode/scripts/: deploy.sh
ClaudCode/src/: lib.rs
ClaudCode/src/client/: client.rs  main.rs
ClaudCode/src/discovery/: service.rs
ClaudCode/src/election/: alea.rs  mod.rs
ClaudCode/src/server/: config.rs  metrics.rs  mod.rs  server.rs
ClaudCode/src/utils/: logging.rs  mod.rs
ClaudCode/tests/: election_test.rs  integration_test.rs
Simple/: Cargo.toml
Simple/config/: client1.toml  client2.toml  server1.toml  server2.toml
Simple/src/: client_main.rs  clients.rs  election.rs  main.rs  messages.rs  server.rs
config/: client.toml  client1.toml  client2.toml  client3.toml  client_stress.toml  server1.toml  server2.toml  server3.toml
config/test/: client_stress.toml  client_test1.toml  client_test2.toml  server1.toml  server2.toml  server3.toml
docs/: ALGORITHM.md  ARCHITECTURE.md  LOCAL_TESTING.md  STRESS_TESTING.md  STRESS_TESTING_QUICK_START.md
images/test/: README.txt
metrics/: client_1.json  client_10.json  client_2.json  client_3.json  client_4.json  client_5.json  client_6.json  client_7.json  client_8.json  client_9.json
metrics/machine_2/: client_1.json  client_10.json  client_2.json  client_3.json  client_4.json  client_5.json  client_6.json  client_7.json  client_8.json  client_9.json
reports/: final_report.json
scripts/: README.md  aggregate_metrics.sh  aggregate_metrics_local.py  aggregate_metrics_local.sh  fault_simulation.sh  fault_simulation_local.sh  find_restarter.sh  restart_server.sh  start_server.sh  start_servers.sh  status_server.sh  stop_server.sh  stop_servers.sh  stress_test.sh
scripts/config/: aggregate.conf  fault_sim.conf  fault_sim_local.conf
src/: client_main.rs  clients.rs  election.rs  lib.rs  main.rs  messages.rs  server.rs  server.rs.backup  steganography.rs
tests/: DISTRIBUTED_TESTING.md  README.md  distributed_test.sh  generate_report.sh  integration_test.sh  run_tests.sh  smoke_test.sh  verify_results.sh
(+20 files in other folders)
