[package]
name = "cloud-p2p"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "web_server"
path = "src/bin/web_server.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rand = "0.8"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
image = "0.24"
sysinfo = "0.32"
# Add these new ones for the web server:
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
base64 = "0.22"

[dev-dependencies]
tempfile = "3.8"